molang queries all organized in 1 place + changed movement detection